# tmm-core

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: nomenclature.md  usage.md
docs/examples/: examples.tex
docs/examples/sections/: 01_fresnel_single.tex  02_fresnel_analytic.tex  03_tir_ftir.tex  04_thin_film_airy.tex  05_halfwave_quarterwave.tex  06_antireflection.tex  07_absorbing_layer.tex  08_beer_lambert.tex  09_metal_reflectance.tex  10_bragg_mirror.tex  11_angle_wavelength_map.tex  12_fabry_perot_finesse.tex  13_symmetry_checks.tex  14_ellipsometry_psi_delta.tex  15_pseudo_dielectric.tex  16_gold_ellipsometry.tex
docs/theory/: theory.tex
examples/: 01_fresnel_single_interface.py  02_fresnel_analytic_check.py  03_tir_and_ftir.py  04_thin_film_airy.py  05_halfwave_quarterwave.py  06_antireflection_coating.py  07_absorbing_layer.py  08_beer_lambert.py  09_metal_reflectance.py  10_bragg_mirror.py  11_angle_wavelength_map.py  12_fabry_perot_finesse.py  13_symmetry_checks.py  14_ellipsometry_psi_delta.py  15_pseudo_dielectric.py  16_gold_ellipsometry.py  plotter.py
src/tmm_core/: __init__.py  core.py
tests/: test_core.py
